--- a/index/templates/index/ajax_subscriptions_base.html
+++ b/index/templates/index/ajax_subscriptions_base.html
@@ -1,2 +1,18 @@
-<div class="row" id="subscriptions">
+<div class="row">
+  <div class="col">
+
+    <!-- BUMPER -->
+
+    <div class="row">
+      <div class="col" id="bumper">
+
+      </div>
+    </div>
+
+    <!-- SUBSCRIPTIONS -->
+
+    <div class="row" id="subscriptions">
+
+    </div>
+  </div>
 </div>
