--- a/index/static/style.css
+++ b/index/static/style.css
@@ -4,17 +4,22 @@ body {
   /*background: hsla(0, 0%, 100%, 1);*/
 }
 
-nav {
+#nav-bar {
   background: rgba(255, 255, 255, 0.8);
   box-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
   z-index: 99;
+  height: 80px;
 }
 
 #canvas {
   min-height: 100vh;
 }
 
-.site-content {
+#bumper {
+  height: 80px;
+}
+
+#site-content {
   background: rgba(255, 255, 255, 0.5);
   border-left: 1px solid #cccccc;
   border-right: 1px solid #cccccc;
@@ -29,37 +34,41 @@ nav {
 
 .search-bar {
   background: #3b6d83;
-  margin: 80px 8rem 2rem;
-  border-radius: 3px;
-  border: 1px solid black;
-
 }
 
 #search-form {
-  max-width: 40%;
+  max-width: 60%;
   margin: auto;
 }
 
-.alphabet {
-  margin: 80px 20px;
-  padding: 30px 0px;
+#alphabet {
+  background-color: #3b6d83;
   border: 1px solid black;
   border-radius: .25rem;
+}
+
+#main {
+  background: #3b6d83;
+  border: 1px solid black;
+}
+
+#options {
+  background-color: #3b6d83;
+  border: 1px solid black;
+}
+
+#results {
+  height: 450px;
+  border: 1px solid black;
+  border-radius: .25rem;
+}
+
+#browse {
+  border: 1px solid black;
 }
 
 #subscriptions {
-  margin-top: 80px;
-  padding: 30px 0px;
   border: 1px solid black;
-  border-radius: .25rem;
-}
-
-.search-results {
-  background: #3b6d83;
-  height: 450px;
-  /*margin: 10px 20px;*/
-  border: 1px solid black;
-  border-radius: .25rem;
 }
 
 .filter-button {
@@ -106,6 +115,7 @@ nav {
   flex-basis: auto;
 }
 
+
 .result-box {
 /*
   background: rgba(40, 110, 150, 0.6);
@@ -140,6 +150,12 @@ nav {
   margin: auto;
   max-width:100%;
   max-height:100%;
+}
+
+#recommendations{
+  height: 400px;
+  border: 1px solid black;
+  border-radius: .25rem;
 }
 
 .sub-box {
