--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -19,15 +19,15 @@
   <body>
 
 <!--HERE BE NAVBAR-->
-    <nav class="navbar navbar-light fixed-top navbar-expand-lg">
-      <div class="container nav-content">
+    <nav class="navbar navbar-light fixed-top navbar-expand-lg" id="nav-bar">
+      <div class="container" id="nav-content">
         {% include 'navbar.html' %}
       </div>
     </nav>
 
     <div class="container">
       <div class="row" id="canvas">
-        <div class="col site-content" id="site-content">
+        <div class="col" id="site-content">
           {% block content %}
           {% endblock %}
         </div>
