--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -8,9 +8,18 @@ dopepod
 <div class="row">
   <div class="col">
 
-<!-- SEARCH BAR -->
+    <!-- BUMPER -->
+
     <div class="row">
-      <div class="col-sm- search-bar" id="search-bar">
+      <div class="col" id="bumper">
+
+      </div>
+    </div>
+
+    <!-- SEARCH BAR -->
+
+    <div class="row">
+      <div class="col-sm-8 search-bar" id="search-bar">
         <div class="texture">
           <div class="row">
             <div class="col">
@@ -27,41 +36,82 @@ dopepod
           </div>
         </div>
       </div>
-    </div>
-
-<!-- RESULTS -->
-<div class="row">
-  <div class="col-sm-2" style="background-color: #3b6d83;">
-    <div class="texture">
-      <div class="row">
-        <nav aria-label="...">
-          <ul class="pagination">
-            {% for a in abc %}
-            <li class="page-item">
-              <a class="page-link" href="#">{{ a }}</a>
-            </li>
-            {% endfor %}
-          </ul>
-        </nav>
+      <div class="col-sm-4" style="background-color: #3b6d83;">
+        <div class="texture">
+          <div class="row">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col-sm-10 search-results">
-    <div class="texture">
-      <div class="row" id="results">
-        {% block results %}
-        {% endblock %}
+
+    <div class="row">
+
+      <!-- SIDE OPTIONS -->
+
+      <div class="col-sm-2" id="options">
+        <div class="texture">
+          <div class="row">
+            <div class="col">
+              <div class="btn-group-vertical btn-group-sm">
+                {% for genre in genres %}
+                <button type="button" class="btn btn-secondary">{{ genre.name }}</button>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="btn-group-vertical btn-group-sm">
+                {% for language in languages %}
+                <button type="button" class="btn btn-secondary">{{ language.name }}</button>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <!-- MAIN -->
+
+      <div class="col-sm-10" id="main">
+        <div class="texture">
+
+          <!-- ALPHABET -->
+
+          <div class="row">
+            <div class="col" id="alphabet">
+              <div class="texture">
+                <div class="row">
+                  <nav class="ml-auto" aria-label="...">
+                    <ul class="pagination">
+                      {% for a in abc %}
+                      <li class="page-item">
+                        <a class="page-link" href="#">{{ a }}</a>
+                      </li>
+                      {% endfor %}
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- RESULTS -->
+
+          <div class="row" id="results">
+            {% block results %}
+            {% endblock %}
+          </div>
+
+          <!-- RECOMMENDATIONS -->
+
+          <div class="row" id="recommendations">
+          </div>
+
+        </div>
       </div>
     </div>
-  </div>
-</div>
 
-<!-- RECOMMENDATIONS -->
-
-  <!--
-  <div class="row" id="recommendations">
-  </div>
-  -->
   </div>
 </div>
 {% endblock %}
