--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,10 +1,9 @@
-<a class="navbar-brand home" href="{% url 'home' %}">dopepod</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
 </button>
 
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-  <ul class="navbar-nav mr-auto">
+<div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
+  <ul class="navbar-nav">
     <li class="nav-item">
       <a class="nav-link" href="#">blog</a>
     </li>
@@ -21,6 +20,7 @@
     {% endif %}
   </ul>
 </div>
+<a class="navbar-brand home mx-auto" href="{% url 'home' %}">dopepod</a>
 <ul class="navbar-nav ml-auto">
   {% if user.is_authenticated %}
   <li>
