--- a/index/static/style.css
+++ b/index/static/style.css
@@ -28,8 +28,8 @@ body {
 .texture {
   background: url("grid.png");
   height: 100%;
-  padding: 30px;
-  margin: 0px -15px;
+  /*padding: 30px;
+  margin: 0px -15px;*/
 }
 
 .search-bar {
@@ -38,29 +38,19 @@ body {
 
 #search-form {
   max-width: 60%;
-  margin: auto;
-}
-
-#alphabet {
-  background-color: #3b6d83;
-  border: 1px solid black;
-  border-radius: .25rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  margin-bottom: 30px; 
 }
 
 #main {
-  background: #3b6d83;
-  border: 1px solid black;
-}
-
-#options {
-  background-color: #3b6d83;
   border: 1px solid black;
 }
 
 #results {
   height: 450px;
   border: 1px solid black;
-  border-radius: .25rem;
 }
 
 #browse {
@@ -71,36 +61,65 @@ body {
   border: 1px solid black;
 }
 
-.filter-button {
-    color: #000;
-    background-color: #fff;
-    border-color: #000;
+#alphabet {
+  border: 1px solid black;
 }
 
-.filter-button:hover {
-    color: #fff;
-    background-color: #000;
-    border-color: #fff;
+.alphabet-buttons {
+  padding: 15px 0px;
 }
 
-.filter-button.active {
-    color: #fff;
-    background-color: #000;
-    border-color: #fff;
+.btn.alphabet-button {
+  /*color: #000;
+  background-color: #fff;
+  border-color: #000;*/
+  font-size: 1rem;
 }
 
-.dropdown-filter {
-  min-width: 0;
-  padding: 0px;
+#options {
+  border: 1px solid black;
 }
+
+.genre-buttons {
+  width: 100%;
+  padding-top: 15px;
+}
+
+.language-buttons {
+  width: 100%;
+  padding-top: 15px;
+}
+
+.btn.filter-button {
+  /*color: #000;
+  background-color: #fff;
+  border-color: #000;*/
+  text-align: left;
+  font-size: 0.7rem;
+}
+
+/*.btn.filter-button:hover {
+  color: #fff;
+  background-color: #000;
+  border-color: #fff;
+}
+
+.btn.filter-button.active {
+  color: #fff;
+  background-color: #000;
+  border-color: #fff;
+}*/
 
 .footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   /*height: 60px;*/
-  background-color: #f5f5f5;
   z-index: 98;
+}
+
+#player {
+  background: #3b6d83;
 }
 
 .input-group {
@@ -115,6 +134,9 @@ body {
   flex-basis: auto;
 }
 
+#search-results {
+  background: #3b6d83;
+}
 
 .result-box {
 /*
@@ -173,8 +195,7 @@ body {
 .tracks {
   margin: 15px;
   padding: 15px;
-  height: 500px;
-  overflow-y: scroll;
+  min-height: 270px;
 }
 
 #overlay {
