--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -1,4 +1,6 @@
-{% load static %}{% load account %}<!DOCTYPE html>
+{% load static %}
+{% load account %}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -13,17 +15,20 @@
     <!--<script src="https://use.fontawesome.com/793ac32e1c.js"></script>-->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-
+    <!-- CSS -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
   </head>
   <body>
 
-<!--HERE BE NAVBAR-->
+    <!--HERE BE NAVBAR-->
+
     <nav class="navbar navbar-light fixed-top navbar-expand-lg" id="nav-bar">
       <div class="container" id="nav-content">
         {% include 'navbar.html' %}
       </div>
     </nav>
+
+    <!-- CONTENT -->
 
     <div class="container">
       <div class="row" id="canvas">
@@ -35,15 +40,21 @@
     </div>
 
     <!--MODAL-->
+
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
+
         </div>
       </div>
     </div>
 
     <!--FOOTER AKA PLAYER-->
-    <footer class="footer" id="player">
+
+    <footer class="footer">
+      <div class="container-fluid" id="player">
+
+      </div>
     </footer>
 
     <!-- Optional JavaScript -->
@@ -51,6 +62,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <!-- JS -->
     <script src="{% static 'scripts.js' %}"></script>
   </body>
 </html>
