--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -25,7 +25,7 @@
   {% if user.is_authenticated %}
   <li>
     <a class="btn btn-primary ajax-logout" href="{% url 'account_logout' %}">
-      Logout {{ user.username }}
+      Logout
     </a>
   </li>
   {% else %}
