--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,5 +1,7 @@
-  <div class="d-flex justify-content-center">
+<div class="row">
+  <div class="col">
     <audio controls preload="metadata" autoplay>
-      <source src="{{ track.url }}" />
+      <source src="{{ track.url }}" type="{{ track.type }}"/>
     </audio>
   </div>
+</div>
