--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -1,11 +1,11 @@
-{% extends 'index/index.html' %}
+{% extends request.is_ajax|yesno:'ajax.html,index/header.html' %}
 
 {% block title %}
 {{ podcast.title }}
 {% endblock %}
 
 {% block content %}
-<div class="row podinfo" id="{{ podcast.itunesid }}">
+<div class="row podinfo" id="podinfo">
   <div class="col-sm-3">
     <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
   </div>
@@ -14,15 +14,14 @@
     <p>{{ podcast.description }}</p>
   </div>
   <div class="col-sm-3">
-    <!-- back button refresh this somehow -->
     {% if podcast.subscribed %}
-    <form class="sub-form" action="{% url 'subscribe' %}" id="sub-form" method="POST">
+    <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
       {% csrf_token %}
       <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
       <input type="submit" class="btn btn-dark" id="sub-button" value="Unsubscribe">
     </form>
     {% else %}
-    <form class="sub-form" action="{% url 'subscribe' %}" id="sub-form" method="POST">
+    <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
       {% csrf_token %}
       <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
       <input type="submit" class="btn btn-dark" id="sub-button" value="Subscribe">
