--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -43,25 +43,30 @@ dopepod
       <!-- SIDE OPTIONS -->
 
       <div class="col-sm-2" id="options">
-        <div class="btn-group-vertical btn-group-sm genre-buttons" data-toggle="buttons">
+        <div class="btn-group-vertical btn-group-sm genre-buttons" id="genre-buttons" data-toggle="buttons">
           <label class="btn btn-outline-primary filter-button active">
-            <input type="radio" name="options" id="All" autocomplete="off">All
+            <input type="radio" name="genre-button" id="All" value="All">All
           </label>
           {% for genre in genres %}
           <label class="btn btn-outline-primary filter-button">
-            <input type="radio" name="options" id="{{ genre.name }}" autocomplete="off">{{ genre.name }}
+            <input type="radio" name="genre-button" id="{{ genre.name }}" value="{{ genre.name }}">{{ genre.name }}
           </label>
           {% endfor %}
         </div>
-        <div class="btn-group-vertical btn-group-sm language-buttons" data-toggle="buttons">
+        <div class="btn-group-vertical btn-group-sm language-buttons" id="language-buttons" data-toggle="buttons">
           <label class="btn btn-outline-primary filter-button active">
-            <input type="radio" name="options" id="All" autocomplete="off">All
+            <input type="radio" name="language-button" id="All" value="All">All
           </label>
           {% for language in languages %}
           <label class="btn btn-outline-primary filter-button">
-            <input type="radio" name="options" id="{{ language.name }}" autocomplete="off">{{ language.name }}
+            <input type="radio" name="language-button" id="{{ language.name }}" value="{{ language.name }}">{{ language.name }}
           </label>
           {% endfor %}
+        </div>
+        <div class="btn-group-vertical btn-group-sm explicit-buttons" id="language-buttons" data-toggle="buttons">
+          <label class="btn btn-outline-primary filter-button active">
+            <input type="checkbox" name="explicit-button" id="All" value="All" checked>Show Explicit
+          </label>
         </div>
       </div>
 
@@ -73,7 +78,7 @@ dopepod
 
         <div class="row">
           <div class="col" id="alphabet">
-            <div class="btn-group btn-group-sm alphabet-buttons" data-toggle="buttons">
+            <div class="btn-group btn-group-sm alphabet-buttons" id="alphabet-buttons" data-toggle="buttons">
               {% for a in abc %}
               <label class="btn btn-outline-primary alphabet-button">
                 <input type="radio" name="options">{{ a }}
