--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,26 +1,22 @@
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-</button>
-
-<div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">blog</a>
-    </li>
-    {% if user.is_authenticated %}
-    <li class="nav-item">
-      <a class="nav-link settings" href="{% url 'settings' %}" data-toggle="modal" data-target="#modal">settings</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link subscriptions" href="{% url 'subscriptions' %}">subscriptions</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link browse" href="{% url 'browse' %}">browse</a>
-    </li>
-    {% endif %}
-  </ul>
-</div>
-<a class="navbar-brand home mx-auto" href="{% url 'home' %}">dopepod</a>
+<ul class="navbar-nav">
+  <li class="nav-item">
+    <a class="navbar-brand home" href="{% url 'home' %}">dopepod</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">blog</a>
+  </li>
+  {% if user.is_authenticated %}
+  <li class="nav-item">
+    <a class="nav-link settings" href="{% url 'settings' %}" data-toggle="modal" data-target="#modal">settings</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link subscriptions" href="{% url 'subscriptions' %}">subscriptions</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link browse" href="{% url 'browse' %}">browse</a>
+  </li>
+  {% endif %}
+</ul>
 <ul class="navbar-nav ml-auto">
   {% if user.is_authenticated %}
   <li>
