--- a/index/templates/index/header.html
+++ b/index/templates/index/header.html
@@ -43,17 +43,20 @@
 
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
-        <div class="modal-content">
-
+        <div class="modal-content" id="modal-content">
         </div>
       </div>
     </div>
 
-    <!--FOOTER AKA PLAYER-->
+    <!--FOOTER-->
 
     <footer class="footer">
-      <div class="container-fluid" id="player">
-
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            dopepod 2017
+          </div>
+        </div>
       </div>
     </footer>
 
