--- a/index/static/style.css
+++ b/index/static/style.css
@@ -32,7 +32,7 @@ body {
   margin: 0px -15px;*/
 }
 
-.search-bar {
+#search-bar {
   background: #3b6d83;
 }
 
@@ -124,15 +124,7 @@ body {
 }*/
 
 .footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  /*height: 60px;*/
-  z-index: 98;
-}
-
-#player {
-  background: #3b6d83;
+  margin-bottom: 50px;
 }
 
 .input-group {
@@ -199,14 +191,35 @@ body {
 }
 
 .podinfo {
-  margin-top: 80px;
-  padding: 10px;
+  /*margin-top: 80px;
+  padding: 10px;*/
 }
 
 .tracks {
-  margin: 15px;
-  padding: 15px;
   min-height: 270px;
+}
+
+/* PLAYER */
+
+#player {
+  background: #3b6d83;
+}
+
+#trackinfo-content {
+  min-height: 50px;
+  background: #3b6d83;
+}
+
+#player-content {
+  min-height: 100%
+}
+
+#bottom-thing {
+  position: fixed;
+  bottom: 800px;
+  width: 100%;
+  /*height: 60px;*/
+  z-index: 98;
 }
 
 #overlay {
