--- a/index/templates/index/subscriptions.html
+++ b/index/templates/index/subscriptions.html
@@ -5,35 +5,31 @@ subscriptions
 {% endblock %}
 
 {% block content %}
-<div class="row">
+<!-- BUMPER -->
+
+<div class="row" id="bumper">
   <div class="col">
 
-    <!-- BUMPER -->
-
-    <div class="row">
-      <div class="col" id="bumper">
-
-      </div>
-    </div>
-
-    <!-- SUBSCRIPTIONS -->
-
-    <div class="row" id="subscriptions">
-      {% if subscriptions %}
-      <div class="col">
-        {% for subscription in subscriptions %}
-        <div class="row">
-          <a class="col result-image show-podinfo sub-box" id="{{ subscription.itunesid }}" href=
-           "{% url 'podinfo' itunesid=subscription.itunesid %}">
-            <h6>{{ subscription.pod.title }}</h6>
-            <p>{{ subscription.last_updated }}</p>
-          </a>
-        </div>
-        {% endfor %}
-      </div>
-      {% endif %}
-    </div>
-
   </div>
+</div>
+
+<!-- SUBSCRIPTIONS -->
+
+<div class="row" id="subscriptions">
+  {% if subscriptions %}
+  <div class="col">
+    {% for subscription in subscriptions %}
+    <div class="row">
+      <a class="col result-image show-podinfo sub-box" id="{{ subscription.itunesid }}" href=
+       "{% url 'podinfo' itunesid=subscription.itunesid %}">
+        <h6>{{ subscription.pod.title }}</h6>
+        <p>{{ subscription.last_updated }}</p>
+      </a>
+    </div>
+    {% endfor %}
+  </div>
+  {% else %}
+  <p>No results :p</p>
+  {% endif %}
 </div>
 {% endblock %}
