--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,19 +1,19 @@
 <ul class="navbar-nav">
   <li class="nav-item">
-    <a class="navbar-brand home" href="{% url 'home' %}">dopepod</a>
+    <a class="navbar-brand home mx-auto" href="{% url 'home' %}">dopepod</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#">blog</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link browse" href="{% url 'browse' %}">browse</a>
+  </li>
   {% if user.is_authenticated %}
   <li class="nav-item">
-    <a class="nav-link settings" href="{% url 'settings' %}" data-toggle="modal" data-target="#modal">settings</a>
+    <a class="nav-link settings" href="{% url 'settings' %}">settings</a>
   </li>
   <li class="nav-item">
     <a class="nav-link subscriptions" href="{% url 'subscriptions' %}">subscriptions</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link browse" href="{% url 'browse' %}">browse</a>
   </li>
   {% endif %}
 </ul>
