--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -1,7 +1,16 @@
-<div class="row">
+<div class="row texture">
   <div class="col">
-    <audio controls preload="metadata" autoplay>
-      <source src="{{ track.url }}" type="{{ track.type }}"/>
-    </audio>
+    <div class="row">
+      <div class="col">
+        <h6>{{ track.title }}</h6>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <audio controls preload="metadata" autoplay>
+          <source src="{{ track.url }}" type="{{ track.type }}"/>
+        </audio>
+      </div>
+    </div>
   </div>
 </div>
