--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -6,51 +6,74 @@
 
 {% block content %}
 <!-- BUMPER -->
-
 <div class="row" id="bumper">
   <div class="col">
-
   </div>
 </div>
-
-<!-- PODINFO -->
-
-<div class="row podinfo"id="podinfo">
-  <div class="col-sm-2">
-    <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
-  </div>
-  <div class="col-sm-4">
-    <h3>{{ podcast.title }}</h3>
-    <p>{{ podcast.description }}</p>
-  </div>
-  <div class="col-sm-2">
-    {% if podcast.subscribed %}
-    <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-      <input type="submit" class="btn btn-dark" id="sub-button" value="Unsubscribe">
-    </form>
-    {% else %}
-    <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
-      {% csrf_token %}
-      <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-      <input type="submit" class="btn btn-dark" id="sub-button" value="Subscribe">
-    </form>
-    {% endif %}
-    <p>{% if podcast.genre.supa %}{{ podcast.genre.supa }} - {% endif %}{{ podcast.genre }}</p>
-    <p>{{ podcast.language }}</p>
-    {% if podcast.explicit %}
-      <p>Explicit</p>
-    {% endif %}
-    <p><em>{{ podcast.copyrighttext }}</em></p>
-  </div>
-  <div class="col-sm-4" id="player">
+<!-- PODINFO BAR -->
+<div class="row">
+  <div class="col podinfo" id="podinfo">
+    <div class="row texture">
+      <div class="col-sm-3">
+        <img src="{{ podcast.artworkUrl }}170x170bb.jpg" />
+      </div>
+      <div class="col-sm-6">
+        <h3>{{ podcast.title }}</h3>
+        <p>{{ podcast.description }}</p>
+      </div>
+      <div class="col-sm-3">
+        {% if podcast.subscribed %}
+        <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+          <input type="submit" class="btn btn-dark" id="sub-button" value="Unsubscribe">
+        </form>
+        {% else %}
+        <form class="sub-form" action="{% url 'subscribe' %}" id="{{ podcast.itunesid }}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+          <input type="submit" class="btn btn-dark" id="sub-button" value="Subscribe">
+        </form>
+        {% endif %}
+        <p>{% if podcast.genre.supa %}{{ podcast.genre.supa }} - {% endif %}{{ podcast.genre }}</p>
+        <p>{{ podcast.language }}</p>
+        {% if podcast.explicit %}
+          <p>Explicit</p>
+        {% endif %}
+        <p><em>{{ podcast.copyrighttext }}</em></p>
+      </div>
+    </div>
   </div>
 </div>
-
 <!-- TRACKS -->
-
 <div class="row tracks" id="tracks">
   {% include 'tracks.html' %}
 </div>
+{% endblock %}
+
+{% block extrajs %}
+<script>
+$(window).ready(function() {
+  // load tracks for podcast
+  // TODO also load on back button
+  var url = "/tracks/";
+  var itunesid = "{{ podcast.itunesid }}";
+  $.ajax({
+    method: "POST",
+    url: url,
+    data: {
+      "itunesid": itunesid,
+    },
+  })
+    .fail(function(xhr, ajaxOptions, thrownError){
+      console.log(thrownError);
+    })
+    .done(function(response) {
+      $("#tracks").hide();
+      $("#tracks").html(response);
+      $('#overlay').addClass('hide');
+      $("#tracks").fadeIn();
+    });
+});
+</script>
 {% endblock %}
