--- a/podcasts/templates/search_base.html
+++ b/podcasts/templates/search_base.html
@@ -12,7 +12,7 @@ search
 </div>
 <!-- SEARCH BAR -->
 <div class="row">
-  <div class="col-sm-8 search-bar" id="search-bar">
+  <div class="col search-bar" id="search-bar">
     <div class="row texture">
       <div class="col">
         <form id="search-form" method="GET" action="{% url 'search' %}">
@@ -27,35 +27,33 @@ search
       </div>
     </div>
   </div>
-  <div class="col-sm-4" id="player">
-  </div>
 </div>
 <div class="row">
   <!-- SIDE OPTIONS -->
   <div class="col-sm-2" id="search-options">
-    <div class="btn-group-vertical btn-group-sm genre-buttons" id="genre-buttons" data-toggle="buttons">
+    <div class="btn-group-vertical btn-group-sm filter-buttons" id="search-genre-buttons" data-toggle="buttons">
       <label class="btn btn-outline-primary filter-button active">
-        <input type="radio" name="genre-button" id="All" value="All" checked>All
+        <input type="radio" name="search-genre" id="All" value="All" checked>All
       </label>
       {% for genre in genres %}
       <label class="btn btn-outline-primary filter-button">
-        <input type="radio" name="genre-button" id="{{ genre.name }}" value="{{ genre.name }}">{{ genre.name }}
+        <input type="radio" name="search-genre" id="{{ genre.name }}" value="{{ genre.name }}">{{ genre.name }}
       </label>
       {% endfor %}
     </div>
-    <div class="btn-group-vertical btn-group-sm language-buttons" id="language-buttons" data-toggle="buttons">
+    <div class="btn-group-vertical btn-group-sm filter-buttons" id="search-language-buttons" data-toggle="buttons">
       <label class="btn btn-outline-primary filter-button active">
-        <input type="radio" name="language-button" id="All" value="All" checked>All
+        <input type="radio" name="search-language" id="All" value="All" checked>All
       </label>
       {% for language in languages %}
       <label class="btn btn-outline-primary filter-button">
-        <input type="radio" name="language-button" id="{{ language.name }}" value="{{ language.name }}">{{ language.name }}
+        <input type="radio" name="search-language" id="{{ language.name }}" value="{{ language.name }}">{{ language.name }}
       </label>
       {% endfor %}
     </div>
-    <div class="btn-group-vertical btn-group-sm explicit-buttons" id="language-buttons" data-toggle="buttons">
+    <div class="btn-group-vertical btn-group-sm filter-buttons" id="search-explicit-buttons" data-toggle="buttons">
       <label class="btn btn-outline-primary filter-button active">
-        <input type="checkbox" name="explicit-button" checked>Show Explicit
+        <input type="checkbox" name="search-explicit" checked>Show Explicit
       </label>
     </div>
   </div>
